@@ -41,7 +41,7 @@ static VOID DeleteESPList(ESP_LIST *AllESPs) {
     while (AllESPs != NULL) {
         Temp = AllESPs;
         AllESPs = AllESPs->NextESP;
-        MyFreePool(&Temp);
+        MyFreePool(Temp);
     } // while
 } // VOID DeleteESPList()
 
@@ -121,8 +121,8 @@ static REFIT_VOLUME *PickOneESP(ESP_LIST *AllESPs) {
             } else {
                 Temp = PoolPrint(L"%s - no name", GuidStr);
             }
-            LOG(3, LOG_LINE_NORMAL, L"Adding '%s' to UI list of ESPs");
-            MyFreePool(&GuidStr);
+            LOG(3, LOG_LINE_NORMAL, L"Adding '%s' to UI list of ESPs", Temp);
+            MyFreePool(GuidStr);
             MenuEntryItem->Title = Temp;
             MenuEntryItem->Tag = TAG_RETURN;
             MenuEntryItem->Row = i++;
@@ -138,13 +138,15 @@ static REFIT_VOLUME *PickOneESP(ESP_LIST *AllESPs) {
                     ChosenVolume = CurrentESP->Volume;
                 } // if
                 CurrentESP = CurrentESP->NextESP;
-                MyFreePool(&Temp);
+                MyFreePool(Temp);
+                Temp = NULL;
             } // while
         } // if
     } else {
         DisplaySimpleMessage(L"Information", L"No eligible ESPs found");
         LOG(2, LOG_LINE_NORMAL, L"No ESPs found");
     } // if
+    MyFreePool(Temp);
     return ChosenVolume;
 } // REFIT_VOLUME *PickOneESP()
 
@@ -154,11 +156,11 @@ static REFIT_VOLUME *PickOneESP(ESP_LIST *AllESPs) {
  *
  ***********************/
 
-static EFI_STATUS RenameFile(IN EFI_FILE *BaseDir, CHAR16 *OldName, CHAR16 *NewName) {
-    EFI_STATUS    Status;
-    EFI_FILE      *FilePtr;
-    EFI_FILE_INFO *NewInfo, *Buffer = NULL;
-    UINTN         NewInfoSize;
+static EFI_STATUS RenameFile(IN EFI_FILE_PROTOCOL *BaseDir, CHAR16 *OldName, CHAR16 *NewName) {
+    EFI_STATUS        Status;
+    EFI_FILE_PROTOCOL *FilePtr = NULL; // DO NOT FREE!
+    EFI_FILE_INFO     *NewInfo, *Buffer = NULL;
+    UINTN             NewInfoSize;
 
     LOG(3, LOG_LINE_NORMAL, L"Trying to rename '%s' to '%s'", OldName, NewName);
     Status = refit_call5_wrapper(BaseDir->Open, BaseDir, &FilePtr, OldName,
@@ -182,20 +184,21 @@ static EFI_STATUS RenameFile(IN EFI_FILE *BaseDir, CHAR16 *OldName, CHAR16 *NewN
                                          &gEfiFileInfoGuid,
                                          NewInfoSize,
                                          (VOID *) NewInfo);
-            MyFreePool(NewInfo);
-            MyFreePool(FilePtr);
-            MyFreePool(Buffer);
+            refit_call1_wrapper(FilePtr->Close, FilePtr);
         } else {
             Status = EFI_BUFFER_TOO_SMALL;
         }
+        MyFreePool(NewInfo);
     } // if
-    refit_call1_wrapper(FilePtr->Close, FilePtr);
+    MyFreePool(Buffer);
     return Status;
 } // EFI_STATUS RenameFile()
 
 // Rename *FileName to add a "-old" extension, but only if that file doesn't
 // already exist. Called on the icons directory to preserve it in case the
 // user wants icons stored there that have been supplanted by new icons.
+// BaseDir = The directory in which the file exists
+// FileName = The name of the file
 EFI_STATUS BackupOldFile(IN EFI_FILE *BaseDir, CHAR16 *FileName) {
     EFI_STATUS          Status = EFI_SUCCESS;
     CHAR16              *NewName;
@@ -215,16 +218,15 @@ EFI_STATUS BackupOldFile(IN EFI_FILE *BaseDir, CHAR16 *FileName) {
 
 // Create directories in which rEFInd will reside....
 static EFI_STATUS CreateDirectories(IN EFI_FILE *BaseDir) {
-    CHAR16   *FileName = NULL;
-    UINTN    i = 0, Status = EFI_SUCCESS;
-    EFI_FILE *TheDir = NULL;
+    CHAR16            *FileName = NULL;
+    UINTN             i = 0, Status = EFI_SUCCESS;
+    EFI_FILE_PROTOCOL *TheDir = NULL; // NOTE: DO NOT FREE!
 
     while ((FileName = FindCommaDelimited(INST_DIRECTORIES, i++)) != NULL && Status == EFI_SUCCESS) {
         Status = refit_call5_wrapper(BaseDir->Open, BaseDir, &TheDir, FileName,
                                  EFI_FILE_MODE_READ | EFI_FILE_MODE_WRITE | EFI_FILE_MODE_CREATE, EFI_FILE_DIRECTORY);
         Status = refit_call1_wrapper(TheDir->Close, TheDir);
         MyFreePool(FileName);
-        MyFreePool(TheDir);
     } // while()
     return (Status);
 } // CreateDirectories()
@@ -233,7 +235,7 @@ static EFI_STATUS CopyOneFile(IN EFI_FILE *SourceDir,
                               IN CHAR16 *SourceName,
                               IN EFI_FILE *DestDir,
                               IN CHAR16 *DestName) {
-    EFI_FILE           *SourceFile = NULL, *DestFile = NULL;
+    EFI_FILE_PROTOCOL  *SourceFile = NULL, *DestFile = NULL; // NOTE: DO NOT FREE!
     UINTN              FileSize = 0, Status;
     EFI_FILE_INFO      *FileInfo = NULL;
     UINTN              *Buffer = NULL;
@@ -270,8 +272,6 @@ static EFI_STATUS CopyOneFile(IN EFI_FILE *SourceDir,
     if (Status == EFI_SUCCESS)
         Status = refit_call1_wrapper(DestFile->Close, DestFile);
 
-    MyFreePool(SourceFile);
-    MyFreePool(DestFile);
     MyFreePool(Buffer);
 
     if (EFI_ERROR(Status)) {
@@ -281,10 +281,10 @@ static EFI_STATUS CopyOneFile(IN EFI_FILE *SourceDir,
 } // EFI_STATUS CopyOneFile()
 
 // Copy a single directory (non-recursively)
-static EFI_STATUS CopyDirectory(IN EFI_FILE *SourceDirPtr,
-                             IN CHAR16 *SourceDirName,
-                             IN EFI_FILE *DestDirPtr,
-                             IN CHAR16 *DestDirName) {
+static EFI_STATUS CopyDirectory(IN EFI_FILE_PROTOCOL *SourceDirPtr,
+                                IN CHAR16 *SourceDirName,
+                                IN EFI_FILE *DestDirPtr,
+                                IN CHAR16 *DestDirName) {
     REFIT_DIR_ITER  DirIter;
     EFI_FILE_INFO   *DirEntry;
     CHAR16          *DestFileName = NULL, *SourceFileName = NULL;
@@ -321,9 +321,9 @@ static EFI_STATUS CopyDrivers(IN EFI_FILE *SourceDirPtr,
     for (i = 0; i < NUM_FS_TYPES; i++)
         DriverCopied[i] = FALSE;
 
-    LOG(3, LOG_LINE_NORMAL, L"Scanning %d volumes for identifiable filesystems", VolumesCount);
+    LOG(1, LOG_LINE_NORMAL, L"Scanning %d volumes for identifiable filesystems", VolumesCount);
     for (i = 0; i < VolumesCount; i++) {
-        LOG(1, LOG_LINE_NORMAL, L"Looking for driver for volume # %d, '%s'", i, Volumes[i]->VolName);
+        LOG(3, LOG_LINE_NORMAL, L"Looking for driver for volume # %d, '%s'", i, Volumes[i]->VolName);
         DriverName = NULL;
         switch (Volumes[i]->FSType) {
 
@@ -458,9 +458,9 @@ static EFI_STATUS CopyFiles(IN EFI_FILE *TargetDir) {
 // Create the BOOT.CSV file used by the fallback.efi/fbx86.efi program.
 // Success isn't critical, so we don't return a Status value.
 static VOID CreateFallbackCSV(IN EFI_FILE *TargetDir) {
-    CHAR16   *Contents = NULL;
-    UINTN    FileSize, Status;
-    EFI_FILE *FilePtr;
+    CHAR16            *Contents = NULL;
+    UINTN             FileSize, Status;
+    EFI_FILE_PROTOCOL *FilePtr; // NOTE: DO NOT FREE!
 
     Status = refit_call5_wrapper(TargetDir->Open, TargetDir, &FilePtr, L"\\EFI\\refind\\BOOT.CSV",
                                  EFI_FILE_MODE_READ | EFI_FILE_MODE_WRITE | EFI_FILE_MODE_CREATE, 0);
@@ -472,7 +472,6 @@ static VOID CreateFallbackCSV(IN EFI_FILE *TargetDir) {
             Status = refit_call3_wrapper(FilePtr->Write, FilePtr, &FileSize, Contents);
             if (Status == EFI_SUCCESS)
                 refit_call1_wrapper(FilePtr->Close, FilePtr);
-            MyFreePool(FilePtr);
         } // if
         MyFreePool(Contents);
     } // if
